--- a/css/index.css
+++ b/css/index.css
@@ -131,41 +131,7 @@
 .tabs-content>.tabs-recommend>.newest-list{
     margin-top: 32px;
 }
-.tabs-content>.tabs-recommend>.newest-list>ul{
-    padding-left: 9px;
-    margin-top: 6px;
-}
-.tabs-content>.tabs-recommend>.newest-list>ul>li{
-    position: relative;
-    padding-bottom: 9px;
-    border-bottom: 1px solid #F4F4F5;
-}
-.tabs-content>.tabs-recommend>.newest-list>ul>li .song-name{
-    font-size: 17px;
-    line-height:1;
-    margin:7px 0;
-}
-.tabs-content>.tabs-recommend>.newest-list>ul>li .song-infos{
-    font-size: 12px;
-    line-height:1;
-    color: #888;
 
-}
-.tabs-content>.tabs-recommend>.newest-list>ul>li .song-infos>.svg-icon-sq{
-    fill:#FE6F3A;
-}
-.tabs-content>.tabs-recommend>.newest-list>ul>li a.play-btn{
-    position: absolute;
-    top:50%;
-    transform: translateY(-50%);
-    right:10px;
-
-}
-.tabs-content>.tabs-recommend>.newest-list>ul>li a.play-btn>.svg-icon-play{
-    fill:#AAAAAA;
-    width:22px;
-    height: 22px;
-}
 .tabs-content>.tabs-recommend>.recommend-download{
     background: transparent url("http://ov9xs8ajf.bkt.clouddn.com/recommand_bg_2x.png") no-repeat;
     background-size: cover;
@@ -190,4 +156,183 @@
     font-size: 12px;
     line-height: 16px;
     transform: scale(.75);
+}
+
+.tabs-content>.tabs-hotlist>.hotlist-title{
+    background: transparent url("http://ov9xs8ajf.bkt.clouddn.com/hot_music_bg_2x.jpg") no-repeat;
+    background-size: cover;
+    width:100%;
+    height:145px;
+    padding:22px 0 28px 20px;
+    color: #ffffff;
+    position: relative;
+}
+.tabs-content>.tabs-hotlist>.hotlist-title::after{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.2);
+    /*opacity: 0.2;*/
+    position: absolute;
+    top:0;
+    left: 0;
+    z-index:1;
+}
+.tabs-content>.tabs-hotlist>.hotlist-title>.host-text{
+    position: relative;
+    z-index: 2;
+}
+.tabs-content>.tabs-hotlist>.hotlist-title>.host-text>.hotlist-icon{
+    width:142px;
+    height: 67px;
+    background: transparent url("http://ov9xs8ajf.bkt.clouddn.com/index_icon_2x.png") no-repeat -24px -30px;
+    background-size: 166px 97px;
+}
+.tabs-content>.tabs-hotlist>.hotlist-title>.host-text>.hotlist-updateDate{
+    font-size: 12px;
+    margin-top: 10px;
+    color: #ddd;
+}
+.tabs-content>.tabs-hotlist>ol.song-list{
+    padding-left: 38px;
+}
+.tabs-content>.tabs-hotlist>ol.song-list>li>.song-order{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -38px;
+    font-size: 17px;
+    display: block;
+    width: 38px;
+    text-align: center;
+    color: #9D9D9D;
+}
+.tabs-content>.tabs-hotlist>ol.song-list>li>.song-order.song-order-hotest{
+    color: #DF3436;
+}
+.tabs-content>.tabs-hotlist>.check-allsongs{
+    color: #999;
+    text-align: center;
+    font-size: 14px;
+    padding:18px 0;
+}
+.tabs-content>.tabs-hotlist>.check-allsongs>a{
+    padding-right: 14px;
+    background: transparent url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAyMiI+PHBhdGggZmlsbC1ydWxlPSJldmVub2RkIiBmaWxsPSJub25lIiBzdHJva2U9IiNjY2MiIHN0cm9rZS13aWR0aD0iMiIgc3Ryb2tlLW1pdGVybGltaXQ9IjEwIiBkPSJtMSAxbDEwIDEwLTEwIDEwIi8+PC9zdmc+) 100% no-repeat;
+    background-size: 7px;
+}
+.tabs-content>.tabs-search>.search{
+    padding:14px 10px;
+    border-bottom: 1px solid #ECEDED;
+}
+.tabs-content>.tabs-search>.search>.search-input-wrapper{
+    position: relative;
+}
+.tabs-content>.tabs-search>.search>.search-input-wrapper input{
+    width:100%;
+    padding:8px 0 4px 28px;
+    border: none;
+    background: #EBECEC;
+    font-size: 14px;
+    color: #333;
+    border-radius: 30px;
+    outline: none;
+}
+.tabs-content>.tabs-search>.search>.search-input-wrapper .svg-icon-search{
+    width: 14px;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    left:9px;
+    color: #CFD0D0;
+}
+.tabs-content>.tabs-search>.search>.search-input-wrapper .input-placeholder{
+    color: #C9C9C9;
+    font-size: 14px;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    left:30px;
+}
+.tabs-content>.tabs-search>.search>.search-input-wrapper .svg-icon-cancel{
+    width: 16px;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    right:9px;
+    color: #BCBDBD;
+    display: none;
+}
+.tabs-content>.tabs-search .search-hot{
+    padding:13px 8px;
+}
+.tabs-content>.tabs-search .search-hot>ul.search-hot-items{
+    display: flex;
+    flex-wrap: wrap;
+}
+.tabs-content>.tabs-search .search-hot>h4{
+    font-size: 12px;
+    color: #666;
+}
+.tabs-content>.tabs-search .search-hot>.search-hot-items>li{
+    color:#333;
+    font-size: 14px;
+    line-height: 32px;
+    padding: 0 14px;
+    border: 1px solid #E7E8EB;
+    border-radius: 16px;
+    margin:7px 8px 0 0;
+}
+.tabs-content>.tabs-search ul.search-history{
+    color:#333;
+
+}
+.tabs-content>.tabs-search ul.search-history>li{
+    margin-left: 40px;
+    padding:16px 16px 16px 0;
+    border-bottom: 1px solid #F3F4F5;
+    position: relative;
+    font-size: 14px;
+}
+.tabs-content>.tabs-search ul.search-history>li .svg-icon-history{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -38px;
+    display: block;
+    width: 38px;
+    height:18px;
+    text-align: center;
+    color: #D5D6D7;
+}
+.tabs-content>.tabs-search ul.search-history>li .svg-icon-cancel-simple{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 16px;
+    display: block;
+    color: #ABABAC;
+    width:18px;
+    height: 18px;
+}
+.tabs-content>.tabs-search>.search-active-show{
+    display: none;
+}
+.tabs-content>.tabs-search>.search-active-show .search-txt{
+    display: block;
+    padding:14px 0;
+    margin-left: 10px;
+    color: #507DAF;
+    border-bottom: 1px solid #ECEDED;
+}
+.tabs-content>.tabs-search>.search-active-show ul.search-related>li{
+    padding:13px 0;
+    color: #333;
+}
+.tabs-content>.tabs-search>.search-active-show ul.search-related>li svg.svg-icon-search{
+    color: #C8C8C9;
+}
+.tabs-content>.tabs-search>.search-results{
+    display: none;
 }
