--- a/css/song.css
+++ b/css/song.css
@@ -1,23 +1,19 @@
-body{
-    /*background: #666;*/
-}
-.content-wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-}
-.content-wrapper>.background-image{
+body>.background-image{
     position: absolute;
     left:0;
     top:0;
     width:100%;
     height:100%;
-    background: url("../img/夜曲.jpg") no-repeat;
-    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-size: 250%;
+    background-position-x: center;
     -webkit-filter: blur(10px) brightness(0.5);
 }
 .content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
     z-index:1;
 }
 .disk{
@@ -48,7 +44,7 @@ body{
     align-items: center;
     transition: all .2s linear;
 }
-.disk>.circle::after{
+.disk>.circle::before{
     content: '';
     display: block;
     position: absolute;
@@ -66,56 +62,67 @@ body{
     height: 65%;
     border-radius: 50%;
 }
+.disk>.circle>.play-btn{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+.disk>.circle>.play-btn>.svg-icon-music-play{
+    width:1.5rem;
+    height:1.5rem;
+    color: #ffffff;
+}
 
 .lyrics{
-    color: #AAA8A8;
-    font-size: 16px;
-    text-align: center;
-    margin: 24px 0;
+color: #AAA8A8;
+font-size: 16px;
+text-align: center;
+margin: 24px 0;
 }
 .lyrics>.title>.song-name{
-    color: #fefefe;
-    font-size:18px;
+color: #fefefe;
+font-size:18px;
 }
 .lyrics>.title>.singer{
-    font-size:16px;
+font-size:16px;
 }
 .lyrics>ul.lyrics-scroll{
-    font-size:16px;
-    height:90px;
-    overflow: hidden;
+font-size:16px;
+height:90px;
+overflow: hidden;
 }
 .lyrics>ul.lyrics-scroll>li{
-    margin-top: 14px;
-    line-height: 1;
-    transition: .1s;
+margin-top: 14px;
+line-height: 1;
+transition: .1s;
 }
 .lyrics>ul.lyrics-scroll>li.active{
-    color: #fefefe;
+color: #fefefe;
 }
 
 .upload-btns{
-    padding: 0 1rem;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
+padding: 0 1rem;
+display: flex;
+justify-content: space-between;
+margin-bottom: 15px;
 }
 .upload-btns>a{
-    display: block;
-    height: 42px;
-    line-height: 42px;
-    font-size: 18px;
-    flex:1;
-    text-align: center;
-    border-radius: 6px;
+display: block;
+height: 42px;
+line-height: 42px;
+font-size: 18px;
+flex:1;
+text-align: center;
+border-radius: 6px;
 }
 .upload-btns>a.open-app{
-    color: #d43b32;
-    border: 1px solid;
-    margin-right: 4px;
+color: #d43b32;
+border: 1px solid;
+margin-right: 4px;
 }
 .upload-btns>a.download-app{
-    color: #ffffff;
-    background: #d43b32;
-    margin-left: 4px;
+color: #ffffff;
+background: #d43b32;
+margin-left: 4px;
 }
