--- a/css/song.css
+++ b/css/song.css
@@ -1,41 +1,60 @@
-body>.background-image{
-    position: absolute;
-    left:0;
-    top:0;
-    width:100%;
-    height:100%;
-    background-repeat: no-repeat;
-    background-size: 250%;
-    background-position-x: center;
-    -webkit-filter: blur(10px) brightness(0.5);
+html, body {
+    height: 100%;
 }
-.content{
+
+.bg-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.background-image {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(1.5);
+    background-repeat: no-repeat;
+    /*transform-origin: center top;*/
+    background-position: center;
+    -webkit-filter: blur(14px);
+}
+
+.content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: relative;
-    z-index:1;
 }
-.disk{
+
+.disk {
     position: relative;
 }
-.disk::after{
+
+.disk::after {
     content: '';
     display: block;
     position: absolute;
-    top:0;
-    left:50%;
+    top: 0;
+    left: 50%;
     transform: translateX(-20%);
     width: 2.4rem;
-    height:3.5rem;
+    height: 3.5rem;
     background: transparent url("../img/needle.png") no-repeat;
     background-size: cover;
-    z-index:1;
+    z-index: 1;
 }
-.disk>.circle{
-    width:8rem;
-    height:8rem;
-    margin:1.8rem auto 0 auto;
+
+.disk > .circle {
+    width: 8rem;
+    height: 8rem;
+    margin: 1.8rem auto 0 auto;
     border-radius: 50%;
     overflow: hidden;
     position: relative;
@@ -44,85 +63,104 @@ body>.background-image{
     align-items: center;
     transition: all .2s linear;
 }
-.disk>.circle::before{
+
+.disk > .circle::before {
     content: '';
     display: block;
     position: absolute;
-    top:0;
-    left:0;
-    right:0;
+    top: 0;
+    left: 0;
+    right: 0;
     bottom: 0;
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     background: transparent url("../img/disc-ip6.png") no-repeat;
     background-size: cover;
 }
-.disk>.circle>img{
-    width:65%;
+
+.disk > .circle > img {
+    width: 65%;
     height: 65%;
     border-radius: 50%;
 }
-.disk>.circle>.play-btn{
+
+.disk > .circle > a.play-btn {
     position: absolute;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     transform: translateX(-50%) translateY(-50%);
+    /*display: none;*/
 }
-.disk>.circle>.play-btn>.svg-icon-music-play{
-    width:1.5rem;
-    height:1.5rem;
+
+.disk > .circle > .play-btn > svg.icon {
+    width: 1.5rem;
+    height: 1.5rem;
     color: #ffffff;
 }
 
-.lyrics{
-color: #AAA8A8;
-font-size: 16px;
-text-align: center;
-margin: 24px 0;
-}
-.lyrics>.title>.song-name{
-color: #fefefe;
-font-size:18px;
-}
-.lyrics>.title>.singer{
-font-size:16px;
-}
-.lyrics>ul.lyrics-scroll{
-font-size:16px;
-height:90px;
-overflow: hidden;
-}
-.lyrics>ul.lyrics-scroll>li{
-margin-top: 14px;
-line-height: 1;
-transition: .1s;
-}
-.lyrics>ul.lyrics-scroll>li.active{
-color: #fefefe;
+/*.disk>.circle>a.play-btn.active{*/
+/*display: block;*/
+/*}*/
+
+.lyrics {
+    color: #AAA8A8;
+    font-size: 16px;
+    text-align: center;
+    margin: 24px 0;
 }
 
-.upload-btns{
-padding: 0 1rem;
-display: flex;
-justify-content: space-between;
-margin-bottom: 15px;
+.lyrics > .title > .song-name {
+    color: #fefefe;
+    font-size: 18px;
 }
-.upload-btns>a{
-display: block;
-height: 42px;
-line-height: 42px;
-font-size: 18px;
-flex:1;
-text-align: center;
-border-radius: 6px;
+
+.lyrics > .title > .singer {
+    font-size: 16px;
 }
-.upload-btns>a.open-app{
-color: #d43b32;
-border: 1px solid;
-margin-right: 4px;
+
+.lyrics > ul.lyrics-scroll {
+    font-size: 16px;
+    height: 90px;
+    margin-top: 16px;
+    overflow: hidden;
 }
-.upload-btns>a.download-app{
-color: #ffffff;
-background: #d43b32;
-margin-left: 4px;
+
+.lyrics > ul.lyrics-scroll > li {
+    /*margin-top: 14px;*/
+    height: 30px;
+    line-height: 1;
+    transition: .1s;
+}
+
+.lyrics > ul.lyrics-scroll > li.active {
+    color: #fefefe;
+}
+
+.upload-btns {
+    padding: 0 1rem;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.upload-btns > a {
+    display: block;
+    height: 42px;
+    line-height: 42px;
+    font-size: 18px;
+    flex: 1;
+    text-align: center;
+    border-radius: 6px;
+}
+
+.upload-btns > a.open-app {
+    color: #d43b32;
+    border: 1px solid;
+    margin-right: 4px;
+}
+
+.upload-btns > a.download-app {
+    color: #ffffff;
+    background: #d43b32;
+    margin-left: 4px;
 }
